refactor: add radio buttons converter and bindings for timer

--- a/Posetrix/App.xaml
+++ b/Posetrix/App.xaml
@@ -11,6 +11,7 @@
                 <ResourceDictionary Source="pack://application:,,,/PresentationFramework.Fluent;component/Themes/Fluent.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Resources/Converters.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Resources/DataTemplates.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Resources/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
