--- a/Posetrix/Views/PredefinedIntervalsView.xaml
+++ b/Posetrix/Views/PredefinedIntervalsView.xaml
@@ -4,15 +4,12 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewmodels="clr-namespace:Posetrix.Core.ViewModels;assembly=Posetrix.Core"
+    d:DataContext="{d:DesignInstance Type=viewmodels:PredefinedIntervalsViewModel}"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
-        <Grid.Resources>
-            <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="RadioButton">
-                <Setter Property="HorizontalAlignment" Value="Stretch" />
-            </Style>
-        </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition />
@@ -25,23 +22,30 @@
             Grid.Column="0"
             Margin="0,0,4,0"
             Content="30s"
-            IsChecked="True" />
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval1}}" />
         <RadioButton
             Grid.Column="1"
             Margin="0,0,4,0"
-            Content="45s" />
+            Content="45s"
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval2}}" />
         <RadioButton
             Grid.Column="2"
             Margin="0,0,4,0"
-            Content="1m" />
+            Content="1m"
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval3}}" />
         <RadioButton
             Grid.Column="3"
             Margin="0,0,4,0"
-            Content="2m" />
+            Content="2m"
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval4}}" />
         <RadioButton
             Grid.Column="4"
             Margin="0,0,4,0"
-            Content="5m" />
-        <RadioButton Grid.Column="5" Content="10m" />
+            Content="5m"
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval5}}" />
+        <RadioButton
+            Grid.Column="5"
+            Content="10m"
+            IsChecked="{Binding SelectedInterval, Converter={StaticResource EnumConverter}, ConverterParameter={x:Static viewmodels:Intervals.Interval6}}" />
     </Grid>
 </UserControl>
