--- a/Posetrix/Views/FoldersAddView.xaml
+++ b/Posetrix/Views/FoldersAddView.xaml
@@ -19,48 +19,59 @@
             <RowDefinition Height="8*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ListView
+        <Border
             Grid.Row="0"
-            Height="200"
-            ItemsSource="{Binding Folders}"
-            SelectedIndex="1"
-            SelectedItem="{Binding SelectedFolder}">
-            <ListView.ItemTemplate>
-                <DataTemplate DataType="{x:Type models:ImageFolder}">
-                    <Grid Margin="8,0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Ellipse
-                            x:Name="Ellipse"
-                            Grid.RowSpan="2"
-                            Width="32"
-                            Height="32"
-                            Margin="6"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Fill="{DynamicResource AccentFillColorDefaultBrush}" />
-                        <TextBlock
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            Margin="12,6,0,0"
-                            FontWeight="Bold"
-                            Text="{Binding FolderName, Mode=OneWay}" />
-                        <TextBlock
-                            Grid.Row="1"
-                            Grid.Column="1"
-                            Margin="12,0,0,6"
-                            Text="{Binding FullFolderPath, Mode=OneWay}" />
-                    </Grid>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
-        <Grid Grid.Row="1">
+            Padding="10"
+            Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
+            BorderBrush="{DynamicResource ControlElevationBorderBrush}"
+            BorderThickness="2"
+            CornerRadius="8">
+            <ListView ItemsSource="{Binding Folders}" SelectedItem="{Binding SelectedFolder}">
+                <ListView.ItemTemplate>
+                    <DataTemplate DataType="{x:Type models:ImageFolder}">
+                        <Grid Margin="8,0">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Ellipse
+                                x:Name="Ellipse"
+                                Grid.RowSpan="2"
+                                Width="30"
+                                Height="30"
+                                Margin="6"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                Fill="{DynamicResource AccentFillColorDefaultBrush}" />
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                Margin="12,6,0,0"
+                                FontWeight="Bold"
+                                Text="{Binding FolderName, Mode=OneWay}" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Margin="12,0,0,6"
+                                Text="{Binding FullFolderPath, Mode=OneWay}" />
+                            <TextBlock
+                                Grid.RowSpan="2"
+                                Grid.Column="2"
+                                HorizontalAlignment="Right"
+                                VerticalAlignment="Center"
+                                Text="{Binding ImageCounter}" />
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Border>
+        <!--  Commands.  -->
+        <Grid Grid.Row="1" Margin="0,20,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
