--- a/Posetrix/Views/CustomIntervalView.xaml
+++ b/Posetrix/Views/CustomIntervalView.xaml
@@ -19,15 +19,21 @@
             Grid.Column="0"
             Height="30"
             Margin="0,0,10,0"
-            Text="{Binding Hours}" />
+            PreviewTextInput="TextBox_PreviewTextInput"
+            Style="{StaticResource TextBoxValidation}"
+            Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
         <TextBox
             Grid.Column="1"
             Height="30"
             Margin="0,0,10,0"
-            Text="{Binding Minutes}" />
+            PreviewTextInput="TextBox_PreviewTextInput"
+            Style="{StaticResource TextBoxValidation}"
+            Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
         <TextBox
             Grid.Column="2"
             Height="30"
-            Text="{Binding Seconds}" />
+            PreviewTextInput="TextBox_PreviewTextInput"
+            Style="{StaticResource TextBoxValidation}"
+            Text="{Binding Seconds, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
     </Grid>
 </UserControl>
