--- a/Posetrix/Views/CustomIntervalView.xaml
+++ b/Posetrix/Views/CustomIntervalView.xaml
@@ -10,30 +10,10 @@
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-        </Grid.ColumnDefinitions>
         <TextBox
-            Grid.Column="0"
-            Height="30"
-            Margin="0,0,10,0"
-            PreviewTextInput="TextBox_PreviewTextInput"
-            Style="{StaticResource TextBoxValidation}"
-            Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
-        <TextBox
-            Grid.Column="1"
-            Height="30"
-            Margin="0,0,10,0"
-            PreviewTextInput="TextBox_PreviewTextInput"
-            Style="{StaticResource TextBoxValidation}"
-            Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
-        <TextBox
-            Grid.Column="2"
             Height="30"
             PreviewTextInput="TextBox_PreviewTextInput"
             Style="{StaticResource TextBoxValidation}"
-            Text="{Binding Seconds, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0}" />
+            Text="{Binding Seconds, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0, TargetNullValue=''}" />
     </Grid>
 </UserControl>
