--- a/Posetrix/Resources/Styles.xaml
+++ b/Posetrix/Resources/Styles.xaml
@@ -35,6 +35,17 @@
         <Setter Property="Margin" Value="4,0" />
         <Setter Property="Padding" Value="0" />
     </Style>
+    <Style
+        x:Key="ControlToggleButton"
+        BasedOn="{StaticResource {x:Type ToggleButton}}"
+        TargetType="ToggleButton">
+        <Setter Property="Width" Value="50" />
+        <Setter Property="Height" Value="50" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontFamily" Value="{DynamicResource SegoeUiIcons}" />
+        <Setter Property="FontSize" Value="24" />
+        <Setter Property="Margin" Value="4,0" />
+    </Style>
     <!--  Predefined intervals.  -->
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}" TargetType="RadioButton">
         <Setter Property="HorizontalAlignment" Value="Stretch" />
