--- a/Posetrix/Views/MainView.xaml
+++ b/Posetrix/Views/MainView.xaml
@@ -13,7 +13,7 @@
     MinHeight="680"
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
     Icon="{StaticResource AppIcon}"
-    ResizeMode="NoResize"
+    ResizeMode="CanResize"
     mc:Ignorable="d">
     <Grid Margin="20">
         <Grid.RowDefinitions>
