--- a/Posetrix/Views/MainView.xaml
+++ b/Posetrix/Views/MainView.xaml
@@ -8,141 +8,142 @@
     xmlns:views="clr-namespace:Posetrix.Views"
     Title="{Binding WindowTitle}"
     Width="400"
-    Height="680"
+    Height="600"
     MinWidth="400"
-    MinHeight="680"
+    MinHeight="600"
     d:DataContext="{d:DesignInstance Type=core:MainViewModel}"
     Icon="{StaticResource AppIcon}"
     ResizeMode="CanResize"
     mc:Ignorable="d">
-    <Grid Margin="20">
+    <Grid Margin="12">
         <Grid.RowDefinitions>
             <!--  Add references button.  -->
             <RowDefinition Height="Auto" />
             <!--  Practice modes.  -->
-            <RowDefinition Height="4*" />
+            <RowDefinition Height="Auto" />
             <!--  References number.  -->
-            <RowDefinition Height="2*" />
+            <RowDefinition Height="*" />
             <!--  Shuffle button.  -->
-            <RowDefinition Height="2*" />
-            <!--  Endless mode.  -->
-            <RowDefinition Height="2*" />
+            <RowDefinition Height="*" />
             <!--  Start a sessiom button.  -->
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
+        <Border
+            Grid.Row="0"
+            Margin="0,0,0,12"
+            Style="{StaticResource ContentPanel}">
             <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        Name="OpenSettingsWindowButton"
+                        Grid.Column="0"
+                        Width="28"
+                        Height="28"
+                        Padding="0"
+                        VerticalAlignment="Center"
+                        Command="{Binding OpenSettingsCommand}"
+                        Content="&#xE713;"
+                        FontFamily="{StaticResource SegoeUiIcons}"
+                        FontSize="16">
+                        <Button.ToolTip>
+                            <ToolTip>
+                                <TextBlock
+                                    FontFamily="Segoe UI"
+                                    FontSize="12"
+                                    Text="Settings" />
+                            </ToolTip>
+                        </Button.ToolTip>
+                    </Button>
+                    <TextBlock
+                        Grid.Column="1"
+                        Margin="-28,0,0,0"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Style="{StaticResource SubtitleTextBlockStyle}"
+                        Text="Add your reference images" />
+                </Grid>
+
                 <Button
-                    Name="OpenSettingsWindowButton"
-                    Grid.Column="0"
-                    Width="28"
-                    Height="28"
-                    Padding="0"
-                    VerticalAlignment="Center"
-                    Command="{Binding OpenSettingsCommand}"
-                    Content="&#xE713;"
+                    Name="AddReferencesButton"
+                    Grid.Row="1"
+                    Height="46"
+                    Margin="0,8"
+                    HorizontalAlignment="Stretch"
+                    Command="{Binding AddFoldersCommand}"
+                    Content="&#xE710;"
                     FontFamily="{StaticResource SegoeUiIcons}"
-                    FontSize="16">
-                    <Button.ToolTip>
-                        <ToolTip>
-                            <TextBlock
-                                FontFamily="Segoe UI"
-                                FontSize="12"
-                                Text="Settings" />
-                        </ToolTip>
-                    </Button.ToolTip>
-                </Button>
+                    FontSize="20"
+                    Style="{DynamicResource AccentButtonStyle}" />
                 <TextBlock
-                    Grid.Column="1"
-                    Margin="-40,0,0,0"
+                    Grid.Row="2"
+                    HorizontalAlignment="Center"
+                    Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                    Text="{Binding FoldersInfo}" />
+            </Grid>
+        </Border>
+        <!--  Practice modes.  -->
+        <Border Grid.Row="1" Style="{StaticResource ContentPanel}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock
+                    Grid.Row="0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Text="Add your reference images" />
+                    Style="{StaticResource TitleTextBlockStyle}"
+                    Text="Practice modes" />
+                <ComboBox
+                    Grid.Row="1"
+                    Margin="0,12"
+                    DisplayMemberPath="DisplayName"
+                    ItemsSource="{Binding Folders}"
+                    SelectedItem="{Binding SelectedViewModel}"
+                    Validation.ErrorTemplate="{x:Null}" />
+                <Grid Grid.Row="2">
+                    <ContentControl Content="{Binding SelectedViewModel}" Validation.ErrorTemplate="{x:Null}" />
+                </Grid>
             </Grid>
-
-            <Button
-                Name="AddReferencesButton"
-                Grid.Row="1"
-                Height="46"
-                Margin="0,10"
-                HorizontalAlignment="Stretch"
-                Command="{Binding AddFoldersCommand}"
-                Content="&#xE710;"
-                FontFamily="{StaticResource SegoeUiIcons}"
-                FontSize="20"
-                Style="{DynamicResource AccentButtonStyle}" />
-            <TextBlock
-                Grid.Row="2"
-                Margin="0,0,0,10"
-                HorizontalAlignment="Center"
-                Text="{Binding FoldersInfo}" />
-        </Grid>
-
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <TextBlock
-                Grid.Row="0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                Text="Practice modes" />
-            <ComboBox
-                Grid.Row="1"
-                DisplayMemberPath="DisplayName"
-                ItemsSource="{Binding Folders}"
-                SelectedItem="{Binding SelectedViewModel}"
-                Validation.ErrorTemplate="{x:Null}" />
-            <Grid Grid.Row="2">
-                <ContentControl Content="{Binding SelectedViewModel}" Validation.ErrorTemplate="{x:Null}" />
-            </Grid>
-        </Grid>
+        </Border>
 
         <!--  Image count section  -->
-        <UniformGrid
+        <Border
             Grid.Row="2"
-            VerticalAlignment="Center"
-            Columns="2">
-            <TextBlock
-                Margin="0,0,10,0"
-                VerticalAlignment="Center"
-                Text="I want to draw" />
-            <TextBox
-                HorizontalAlignment="Stretch"
-                Text="{Binding CustomImageCount}"
-                ToolTip="0: Endless mode" />
-            <!--<Button Command="{Binding IncrementCommand}" Content="Increment" />
-    <Button Command="{Binding DecrementCommand}" Content="Decrement" />-->
-        </UniformGrid>
+            Margin="0,12,0,0"
+            Style="{StaticResource ContentPanel}">
+            <UniformGrid VerticalAlignment="Center" Columns="2">
+                <TextBlock VerticalAlignment="Center" Text="Images to draw" />
+                <TextBox
+                    x:Name="ImageCount"
+                    HorizontalAlignment="Stretch"
+                    PreviewTextInput="ImageCount_PreviewTextInput"
+                    Style="{StaticResource TextBoxValidation}"
+                    Text="{Binding ImageCount, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, ValidatesOnDataErrors=True, FallbackValue=0, TargetNullValue=''}"
+                    ToolTip="0: Endless mode" />
+            </UniformGrid>
+        </Border>
 
         <!--  Shuffle section.  -->
-        <UniformGrid Grid.Row="3" Columns="2">
-            <TextBlock
-                Margin="0,0,10,0"
-                VerticalAlignment="Center"
-                Text="Shuffle images" />
-            <CheckBox HorizontalAlignment="Center" IsChecked="{Binding IsShuffleEnabled}" />
-        </UniformGrid>
-
-        <!--  Endless mode section.  -->
-        <UniformGrid Grid.Row="4" Columns="2">
-            <TextBlock
-                Margin="0,0,10,0"
-                VerticalAlignment="Center"
-                Text="Endless mode" />
-            <CheckBox HorizontalAlignment="Center" IsChecked="True" />
-        </UniformGrid>
+        <Border
+            Grid.Row="3"
+            Margin="0,12"
+            Style="{StaticResource ContentPanel}">
+            <UniformGrid Columns="2">
+                <TextBlock VerticalAlignment="Center" Text="Shuffle images" />
+                <CheckBox HorizontalAlignment="Center" IsChecked="{Binding IsShuffleEnabled}" />
+            </UniformGrid>
+        </Border>
 
         <Grid Grid.Row="5">
             <Button
